# multi-time-gnn

./: .gitignore  README.md  check.ipynb  config.yaml  dataset.py  main.py  model.py  pixi.toml  prediction.py  pyproject.toml  pyproject_.toml  training.py  utils.py
plots/: plot_learned_graphs.ipynb  plot_preprocessing.ipynb
result_models/eeg/horizon_12_ar/: config.yaml  model  results.json
result_models/eeg/horizon_12_mtgnn/: NextStepModelMTGNN.pt  config.yaml  results.json
result_models/eeg/horizon_24_ar/: config.yaml  model  results.json
result_models/eeg/horizon_3_ar/: config.yaml  model  results.json
result_models/eeg/horizon_3_mtgnn/: NextStepModelMTGNN.pt  config.yaml  results.json
result_models/eeg/horizon_3_mtgnn_7_neig/: NextStepModelMTGNN.pt  config.yaml  results.json
result_models/eeg/horizon_6_ar/: config.yaml  model  results.json
result_models/eeg/horizon_6_mtgnn/: NextStepModelMTGNN.pt  config.yaml  results.json
result_models/eeg/hoziron_24_mtgnn/: NextStepModelMTGNN.pt  config.yaml  results.json
result_models/solar/horizon_12_ar/: config.yaml  model  results.json
result_models/solar/horizon_12_mtgnn/: NextStepModelMTGNN.pt  results.json
result_models/solar/horizon_24_ar/: config.yaml  model  results.json
result_models/solar/horizon_24_mtgnn/: NextStepModelMTGNN.pt  config.yaml  results.json
result_models/solar/horizon_3_ar/: config.yaml  model  results.json
result_models/solar/horizon_6_ar/: config.yaml  (+2 more)
src/multi_time_gnn/: dataset.py  horizon.py  model.py  preprocessing.py  test.py  training.py  utils.py  visualization.py
(+23 files in other folders)
